english version + gameplay improvement

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Jeu VR sur navigateur" />
+    <meta name="description" content="Browser VR Game" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DungeonVR</title>
     <script type="module" src="/main.js"></script>
@@ -12,9 +12,9 @@
   <body>
     <div class="panel">
       <img class="logo" src="logo.png" alt="logo codeur de nuit">
-      <p><b> DungeonVR</b> est un jeu d'action aventure en VR. </p>
-      <p> 1 - Brancher votre casque et activer OculusLink si vous êtes sur Quest 2. </p>
-      <p> 2 - Cliquer sur le bouton ENTER VR  et profiter de l'experience. </p>
+      <p><b> DungeonVR</b> is a VR action adventure game. </p>
+      <p> 1 - Plug in your headset and enable OculusLink if you have a Quest 2.</p>
+      <p> 2 - Click on <b>ENTER VR</b> and enjoy the experience. </p>
       <div class="panel__link">
         <a class="icon icon-youtube" href="https://youtu.be/6Gc-SJBmTzs"></a>
         <a class="icon icon-twitter-bird" href="https://twitter.com/Codeur_de_nuit"></a>
